// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`api resource group snapshot 1`] = `
AwsResourceGroup {
  "config": {
    "name": "api",
  },
  "dependencies": {},
  "id": 0,
  "platform": "aws",
  "resources": [
    {
      "config": {
        "Name": "api",
        "ProtocolType": "HTTP",
      },
      "dependencies": {},
      "deploy": [Function: AsyncFunction],
      "groupId": 0,
      "id": 0,
      "output": null,
      "retryOn": undefined,
      "type": "aws/api-gateway",
    },
    {
      "config": {
        "AutoDeploy": true,
        "StageName": "$default",
      },
      "dependencies": {
        "router": {
          "config": {
            "Name": "api",
            "ProtocolType": "HTTP",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 0,
          "id": 0,
          "output": null,
          "retryOn": undefined,
          "type": "aws/api-gateway",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 0,
      "id": 1,
      "output": null,
      "retryOn": undefined,
      "type": "aws/api-gateway/stage",
    },
  ],
  "type": "api",
}
`;

exports[`route resource group snapshot 1`] = `
AwsResourceGroup {
  "config": {},
  "dependencies": {
    "fn": 1,
    "router": 0,
  },
  "id": 2,
  "platform": "aws",
  "resources": [
    {
      "config": {
        "RouteKey": "GET /hello",
      },
      "dependencies": {
        "api": {
          "config": {
            "Name": "api",
            "ProtocolType": "HTTP",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 0,
          "id": 0,
          "output": null,
          "retryOn": undefined,
          "type": "aws/api-gateway",
        },
        "lambdaIntegration": {
          "config": {},
          "dependencies": {
            "api": {
              "config": {
                "Name": "api",
                "ProtocolType": "HTTP",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 0,
              "id": 0,
              "output": null,
              "retryOn": undefined,
              "type": "aws/api-gateway",
            },
            "lambda": {
              "config": {
                "FunctionName": "function-1",
                "Handler": "index.handler.fn.js",
                "Runtime": "nodejs18.x",
              },
              "dependencies": {
                "policyAttachment": {
                  "config": {
                    "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
                  },
                  "dependencies": {
                    "role": {
                      "config": {
                        "RoleName": "1-role",
                      },
                      "dependencies": {},
                      "deploy": [Function: AsyncFunction],
                      "groupId": 1,
                      "id": 3,
                      "output": null,
                      "retryOn": undefined,
                      "type": "aws/lambda/role",
                    },
                  },
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 4,
                  "output": null,
                  "retryOn": undefined,
                  "type": "aws/lambda/policy-attachment",
                },
                "role": {
                  "config": {
                    "RoleName": "1-role",
                  },
                  "dependencies": {},
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 3,
                  "output": null,
                  "retryOn": undefined,
                  "type": "aws/lambda/role",
                },
                "zipFile": {
                  "config": {
                    "fileName": "src/fns/handler.fn.js",
                  },
                  "dependencies": {},
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 2,
                  "output": null,
                  "retryOn": undefined,
                  "type": "std/zip",
                },
              },
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 5,
              "output": null,
              "retryOn": [
                "InvalidParameterValueException",
              ],
              "type": "aws/lambda",
            },
          },
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 8,
          "output": null,
          "retryOn": undefined,
          "type": "aws/api-gateway/integration/lambda",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 2,
      "id": 9,
      "output": null,
      "retryOn": undefined,
      "type": "aws/api-gateway/route",
    },
  ],
  "type": "api/route",
}
`;

exports[`route resource group snapshot 2`] = `
AwsResourceGroup {
  "config": {
    "config": {
      "fileName": "src/fns/handler.fn.js",
      "handler": "handler.fn.js",
    },
  },
  "dependencies": {},
  "id": 1,
  "platform": "aws",
  "resources": [
    {
      "config": {
        "fileName": "src/fns/handler.fn.js",
      },
      "dependencies": {},
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 2,
      "output": null,
      "retryOn": undefined,
      "type": "std/zip",
    },
    {
      "config": {
        "RoleName": "1-role",
      },
      "dependencies": {},
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 3,
      "output": null,
      "retryOn": undefined,
      "type": "aws/lambda/role",
    },
    {
      "config": {
        "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
      },
      "dependencies": {
        "role": {
          "config": {
            "RoleName": "1-role",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 3,
          "output": null,
          "retryOn": undefined,
          "type": "aws/lambda/role",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 4,
      "output": null,
      "retryOn": undefined,
      "type": "aws/lambda/policy-attachment",
    },
    {
      "config": {
        "FunctionName": "function-1",
        "Handler": "index.handler.fn.js",
        "Runtime": "nodejs18.x",
      },
      "dependencies": {
        "policyAttachment": {
          "config": {
            "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
          "dependencies": {
            "role": {
              "config": {
                "RoleName": "1-role",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 3,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/role",
            },
          },
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 4,
          "output": null,
          "retryOn": undefined,
          "type": "aws/lambda/policy-attachment",
        },
        "role": {
          "config": {
            "RoleName": "1-role",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 3,
          "output": null,
          "retryOn": undefined,
          "type": "aws/lambda/role",
        },
        "zipFile": {
          "config": {
            "fileName": "src/fns/handler.fn.js",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 2,
          "output": null,
          "retryOn": undefined,
          "type": "std/zip",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 5,
      "output": null,
      "retryOn": [
        "InvalidParameterValueException",
      ],
      "type": "aws/lambda",
    },
    {
      "config": {},
      "dependencies": {
        "lambda": {
          "config": {
            "FunctionName": "function-1",
            "Handler": "index.handler.fn.js",
            "Runtime": "nodejs18.x",
          },
          "dependencies": {
            "policyAttachment": {
              "config": {
                "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              },
              "dependencies": {
                "role": {
                  "config": {
                    "RoleName": "1-role",
                  },
                  "dependencies": {},
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 3,
                  "output": null,
                  "retryOn": undefined,
                  "type": "aws/lambda/role",
                },
              },
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 4,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/policy-attachment",
            },
            "role": {
              "config": {
                "RoleName": "1-role",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 3,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/role",
            },
            "zipFile": {
              "config": {
                "fileName": "src/fns/handler.fn.js",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 2,
              "output": null,
              "retryOn": undefined,
              "type": "std/zip",
            },
          },
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 5,
          "output": null,
          "retryOn": [
            "InvalidParameterValueException",
          ],
          "type": "aws/lambda",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 6,
      "output": null,
      "retryOn": undefined,
      "type": "aws/lambda/log-group",
    },
    {
      "config": {},
      "dependencies": {
        "api": {
          "config": {
            "Name": "api",
            "ProtocolType": "HTTP",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 0,
          "id": 0,
          "output": null,
          "retryOn": undefined,
          "type": "aws/api-gateway",
        },
        "lambda": {
          "config": {
            "FunctionName": "function-1",
            "Handler": "index.handler.fn.js",
            "Runtime": "nodejs18.x",
          },
          "dependencies": {
            "policyAttachment": {
              "config": {
                "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              },
              "dependencies": {
                "role": {
                  "config": {
                    "RoleName": "1-role",
                  },
                  "dependencies": {},
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 3,
                  "output": null,
                  "retryOn": undefined,
                  "type": "aws/lambda/role",
                },
              },
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 4,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/policy-attachment",
            },
            "role": {
              "config": {
                "RoleName": "1-role",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 3,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/role",
            },
            "zipFile": {
              "config": {
                "fileName": "src/fns/handler.fn.js",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 2,
              "output": null,
              "retryOn": undefined,
              "type": "std/zip",
            },
          },
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 5,
          "output": null,
          "retryOn": [
            "InvalidParameterValueException",
          ],
          "type": "aws/lambda",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 7,
      "output": null,
      "retryOn": undefined,
      "type": "aws/lambda/permission/api-gateway",
    },
    {
      "config": {},
      "dependencies": {
        "api": {
          "config": {
            "Name": "api",
            "ProtocolType": "HTTP",
          },
          "dependencies": {},
          "deploy": [Function: AsyncFunction],
          "groupId": 0,
          "id": 0,
          "output": null,
          "retryOn": undefined,
          "type": "aws/api-gateway",
        },
        "lambda": {
          "config": {
            "FunctionName": "function-1",
            "Handler": "index.handler.fn.js",
            "Runtime": "nodejs18.x",
          },
          "dependencies": {
            "policyAttachment": {
              "config": {
                "PolicyArn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              },
              "dependencies": {
                "role": {
                  "config": {
                    "RoleName": "1-role",
                  },
                  "dependencies": {},
                  "deploy": [Function: AsyncFunction],
                  "groupId": 1,
                  "id": 3,
                  "output": null,
                  "retryOn": undefined,
                  "type": "aws/lambda/role",
                },
              },
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 4,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/policy-attachment",
            },
            "role": {
              "config": {
                "RoleName": "1-role",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 3,
              "output": null,
              "retryOn": undefined,
              "type": "aws/lambda/role",
            },
            "zipFile": {
              "config": {
                "fileName": "src/fns/handler.fn.js",
              },
              "dependencies": {},
              "deploy": [Function: AsyncFunction],
              "groupId": 1,
              "id": 2,
              "output": null,
              "retryOn": undefined,
              "type": "std/zip",
            },
          },
          "deploy": [Function: AsyncFunction],
          "groupId": 1,
          "id": 5,
          "output": null,
          "retryOn": [
            "InvalidParameterValueException",
          ],
          "type": "aws/lambda",
        },
      },
      "deploy": [Function: AsyncFunction],
      "groupId": 1,
      "id": 8,
      "output": null,
      "retryOn": undefined,
      "type": "aws/api-gateway/integration/lambda",
    },
  ],
  "type": "aws/function",
}
`;
